--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
 
         <!-- Item List -->
         <ul id="itemList" class="mt-4 space-y-3"></ul>
+        <hr>
+        <h4 class="font-bold text-center text-gray-800 mb-4">Develop by Sumon Mahmud</h4>
     </div>
 
     <!-- Socket.io -->
