add update copyright name

--- a/public/index.html
+++ b/public/index.html
@@ -1,47 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CRUD App with Real-Time Updates</title>
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-100 flex justify-center items-center min-h-screen">
+  </head>
+  <body class="bg-gray-100 flex justify-center items-center min-h-screen">
     <div class="w-full max-w-2xl bg-white shadow-lg rounded-lg p-6">
-        <h1 class="text-2xl font-bold text-center text-gray-800 mb-4">CRUD App</h1>
+      <h1 class="text-2xl font-bold text-center text-gray-800 mb-4">
+        CRUD App
+      </h1>
 
-        <!-- Form for Adding Items -->
-        <div class="flex flex-col gap-3">
-            <input type="text" id="name" placeholder="Name" class="border p-2 rounded-md">
-            <input type="text" id="description" placeholder="Description" class="border p-2 rounded-md">
-            <input type="number" id="price" placeholder="Price" class="border p-2 rounded-md">
-            <button id="submitButton" onclick="addItem()" class="bg-blue-500 text-white p-2 rounded-md hover:bg-blue-600">
-                Add Item
-            </button>
-        </div>
+      <!-- Form for Adding Items -->
+      <div class="flex flex-col gap-3">
+        <input
+          type="text"
+          id="name"
+          placeholder="Name"
+          class="border p-2 rounded-md"
+        />
+        <input
+          type="text"
+          id="description"
+          placeholder="Description"
+          class="border p-2 rounded-md"
+        />
+        <input
+          type="number"
+          id="price"
+          placeholder="Price"
+          class="border p-2 rounded-md"
+        />
+        <button
+          id="submitButton"
+          onclick="addItem()"
+          class="bg-blue-500 text-white p-2 rounded-md hover:bg-blue-600"
+        >
+          Add Item
+        </button>
+        <hr />
+        <h4 class="font-bold text-center text-gray-800 p-3">
+          Develop by Sumon Mahmud
+        </h4>
+      </div>
 
-        <!-- Item List -->
-        <ul id="itemList" class="mt-4 space-y-3"></ul>
-        <hr>
-        <h4 class="font-bold text-center text-gray-800 mb-4">Develop by Sumon Mahmud</h4>
+      <!-- Item List -->
+      <ul id="itemList" class="mt-4 space-y-3"></ul>
     </div>
 
     <!-- Socket.io -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>
     <script>
-        const API_URL = "http://localhost:3000/api/items";
-        const socket = io("http://localhost:3000");
+      const API_URL = "http://localhost:3000/api/items";
+      const socket = io("http://localhost:3000");
 
-        let editingItemId = null;
+      let editingItemId = null;
 
-        async function fetchItems() {
-            const response = await fetch(API_URL);
-            const items = await response.json();
-            const itemList = document.getElementById("itemList");
-            itemList.innerHTML = "";
+      async function fetchItems() {
+        const response = await fetch(API_URL);
+        const items = await response.json();
+        const itemList = document.getElementById("itemList");
+        itemList.innerHTML = "";
 
-            items.forEach((item) => {
-                itemList.innerHTML += `
+        items.forEach((item) => {
+          itemList.innerHTML += `
                     <li class="bg-white p-3 mt-3 shadow-md rounded-md flex justify-between items-center">
                         <span class="font-medium">${item.name} - ${item.description} - $${item.price}</span>
                         <div>
@@ -49,56 +72,56 @@
                             <button onclick="deleteItem('${item._id}')" class="text-red-500">Delete</button>
                         </div>
                     </li>`;
-            });
+        });
+      }
+
+      async function addItem() {
+        const name = document.getElementById("name").value;
+        const description = document.getElementById("description").value;
+        const price = document.getElementById("price").value;
+        const itemData = { name, description, price };
+
+        if (editingItemId) {
+          await fetch(`${API_URL}/${editingItemId}`, {
+            method: "PUT",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(itemData),
+          });
+          editingItemId = null;
+          document.getElementById("submitButton").innerText = "Add Item";
+        } else {
+          await fetch(API_URL, {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(itemData),
+          });
         }
+        clearForm();
+      }
 
-        async function addItem() {
-            const name = document.getElementById("name").value;
-            const description = document.getElementById("description").value;
-            const price = document.getElementById("price").value;
-            const itemData = { name, description, price };
+      function editItem(id, name, description, price) {
+        document.getElementById("name").value = name;
+        document.getElementById("description").value = description;
+        document.getElementById("price").value = price;
+        editingItemId = id;
+        document.getElementById("submitButton").innerText = "Update Item";
+      }
 
-            if (editingItemId) {
-                await fetch(`${API_URL}/${editingItemId}`, {
-                    method: "PUT",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify(itemData),
-                });
-                editingItemId = null;
-                document.getElementById("submitButton").innerText = "Add Item";
-            } else {
-                await fetch(API_URL, {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify(itemData),
-                });
-            }
-            clearForm();
-        }
+      async function deleteItem(id) {
+        await fetch(`${API_URL}/${id}`, { method: "DELETE" });
+      }
 
-        function editItem(id, name, description, price) {
-            document.getElementById("name").value = name;
-            document.getElementById("description").value = description;
-            document.getElementById("price").value = price;
-            editingItemId = id;
-            document.getElementById("submitButton").innerText = "Update Item";
-        }
+      function clearForm() {
+        document.getElementById("name").value = "";
+        document.getElementById("description").value = "";
+        document.getElementById("price").value = "";
+        document.getElementById("submitButton").innerText = "Add Item";
+      }
 
-        async function deleteItem(id) {
-            await fetch(`${API_URL}/${id}`, { method: "DELETE" });
-        }
+      // Listen for real-time updates
+      socket.on("itemUpdated", fetchItems);
 
-        function clearForm() {
-            document.getElementById("name").value = "";
-            document.getElementById("description").value = "";
-            document.getElementById("price").value = "";
-            document.getElementById("submitButton").innerText = "Add Item";
-        }
-
-        // Listen for real-time updates
-        socket.on("itemUpdated", fetchItems);
-
-        fetchItems();
+      fetchItems();
     </script>
-</body>
+  </body>
 </html>
