add develop by name color

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
           Add Item
         </button>
         <hr />
-        <h4 class="font-bold text-center text-gray-800 p-3">
+        <h4 class="font-bold text-red-800 text-center text-gray-800 p-3">
           Develop by Sumon Mahmud
         </h4>
       </div>
