--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,8 @@
     <!-- Socket.io -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>
     <script>
-      const API_URL = "http://localhost:3000/api/items";
-      const socket = io("http://localhost:3000");
+      const API_URL = "https://realtime-crud-app.vercel.app/api/items";
+      const socket = io("https://realtime-crud-app.vercel.app/");
 
       let editingItemId = null;
 
